[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
# removed chrono as i'm using it directly
today = []
test_lib = []

[dependencies]

# Template dependencies
chrono = "0.4.31"
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
itertools = "0.13.0"
nom = "7.1.3"
levenshtein = "1.0.5"
